@startuml
scale 2000 width
!pragma useNewPackage
hide empty members


package ska_tmc_cdm.schemas {
	package central_node.py <<Rectangle>> {
		class ReleaseResourcesRequestSchema
		class AssignResourcesRequestSchema
		class AssignResourcesResponseSchema
        class SDPWorkflowSchema
        class PbDependencySchema
        class ProcessingBlockSchema
        class SdpConfigurationSchema
        class MCCSAllocateSchema
        note top of MCCSAllocateSchema
            This is a general mapping for
            MCCSAllocate objects
        end note

		class DishAllocationSchema
		note top of DishAllocationSchema
			This is a general mapping for
			DishAllocation objects
		end note

		class DishAllocationResponseSchema
		note top of DishAllocationResponseSchema
			This maps DishAllocation JSON
			objects returned as part of a
			resource assignment request
		end note

        class ScanTypeSchema
        class ChannelSchema
        class ExecutionBlockConfigurationSchema
        class BeamConfigurationSchema
        class ChannelConfigurationSchema
        class PolarisationConfigurationSchema
        class FieldConfigurationSchema
        class PhaseDirSchema
        class ScriptConfigurationSchema
        class EBScanTypeBeamSchema
        class EBScanTypeSchema
	}
}

package ska_tmc_cdm.messages.central_node {
	package assign_resources.py <<Rectangle>> {
		class AssignResourcesRequest
		class AssignResourcesResponse
		class DishAllocation
        class ScanType
        class SDPWorkflow
        class PbDependency
        class ProcessingBlockConfiguration
        class SDPConfiguration
        class MCCSAllocate
        class Channel
        class ExecutionBlockConfiguration
        class BeamConfiguration
        class ChannelConfiguration
        class PolarisationConfiguration
        class FieldConfiguration
        class PhaseDir
        class ScriptConfiguration
        class EBScanTypeBeam
        class EBScanType
	}

	package release_resources.py <<Rectangle>> {
		class ReleaseResourcesRequest
	}
}

DishAllocationResponseSchema --- DishAllocation
AssignResourcesRequestSchema --- AssignResourcesRequest
AssignResourcesResponseSchema --- AssignResourcesResponse
ReleaseResourcesRequestSchema --- ReleaseResourcesRequest
ScanTypeSchema --- ScanType
SDPWorkflowSchema --- SDPWorkflow
PbDependencySchema --- PbDependency
ProcessingBlockSchema --- ProcessingBlockConfiguration
SdpConfigurationSchema --- SDPConfiguration
MCCSAllocateSchema --- MCCSAllocate
ChannelSchema --- Channel
ExecutionBlockConfigurationSchema --- ExecutionBlockConfiguration
BeamConfigurationSchema --- BeamConfiguration
ChannelConfigurationSchema -- ChannelConfiguration
PolarisationConfigurationSchema -- PolarisationConfiguration
FieldConfigurationSchema --- FieldConfiguration
PhaseDirSchema --- PhaseDir
ScriptConfigurationSchema --- ScriptConfiguration
EBScanTypeBeamSchema --- EBScanTypeBeam
EBScanTypeSchema --- EBScanType

@enduml
